--- a/package.json
+++ b/package.json
@@ -1,29 +1,37 @@
 {
-  "name": "react-scripts",
-  "version": "0.1.0",
-  "description": "A docker container that runs a 'boiler-plated' react application made with create-react-app and react-scripts",
+  "name": "marvel",
+  "version": "1.0.0",
+  "description": "Some exercices around react and the marvel API",
   "dependencies": {
-    "external-editor": "^2.0.4",
-    "is-promise": "^2.1.0",
-    "js-base64": "^2.1.9",
-    "mimic-fn": "^1.1.0",
-    "npm": "^5.0.2",
-    "querystringify": "^1.0.0",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "rx": "^4.1.0",
-    "start": "^5.1.0"
+    "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "amdefine": "^1.0.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
     "enzyme": "^2.8.2",
-    "fetch-mock": "^5.11.0",
-    "react-scripts": "1.0.7",
-    "react-test-renderer": "^15.5.4"
+    "express": "^4.15.3",
+    "file-loader": "^0.11.2",
+    "inquirer": "^3.0.6",
+    "json-loader": "^0.5.4",
+    "md5": "^2.2.1",
+    "npm": "^5.0.3",
+    "querystringify": "^1.0.0",
+    "react-hot-loader": "^1.3.1",
+    "style-loader": "^0.18.2",
+    "svg-inline-loader": "^0.7.1",
+    "svg-url-loader": "^2.0.2",
+    "webpack": "^2.6.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "node server"
   }
 }
