--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Some exercices around react and the marvel API",
   "dependencies": {
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "querystringify": "^1.0.0"
   },
   "devDependencies": {
     "amdefine": "^1.0.1",
@@ -19,11 +20,13 @@
     "express": "^4.15.3",
     "file-loader": "^0.11.2",
     "inquirer": "^3.0.6",
+    "jest-cli": "^20.0.4",
     "json-loader": "^0.5.4",
     "md5": "^2.2.1",
     "npm": "^5.0.3",
-    "querystringify": "^1.0.0",
+    "react-addons-test-utils": "^15.5.1",
     "react-hot-loader": "^1.3.1",
+    "react-test-renderer": "^15.5.4",
     "style-loader": "^0.18.2",
     "svg-inline-loader": "^0.7.1",
     "svg-url-loader": "^2.0.2",
@@ -32,6 +35,7 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "scripts": {
-    "start": "node server"
+    "start": "node server",
+    "test": "jest --coverage --watchAll"
   }
 }
